--- a/style.css
+++ b/style.css
@@ -46,6 +46,42 @@ input[type=search]:focus {
 	box-shadow: 0 0 5px rgba(109,207,246,.5);
 }
 
+#main {
+        width:78%;
+        height:auto; /*can be anything, just should make sure it is taller than the sidebar*/
+        float: right;
+        background-color: #fafafa;
+}
+#sidebar {
+        width: 21%;
+        min-height: 600px;
+        max-height: 600px;
+        overflow: auto;
+        margin: 0px 0px 0px 0px; /*controls the cutoff of the top and bottom limitations*/
+        float: left; /* float right for a right aligned sidebar */
+}
+#sidebar_inner {
+        width: 80%;
+}
+#footer {
+        width: 1020;
+        clear:both;
+        margin-top: 100px;
+}
+#wrapper {
+        width: 1020; /* MUST HAVE WIDTH SET, should be the sidebar width + main width */
+        margin-left: auto;
+        margin-right: auto;
+}
+
+#scroller {
+	position:absolute; z-index:1;
+/*	-webkit-touch-callout:none;*/
+	-webkit-tap-highlight-color:rgba(0,0,0,0);
+	width:100%;
+	padding:0;
+}
+
 .b1{
 cursor: pointer; cursor: hand; font-weight: bold; white-space:nowrap;
 }
@@ -124,23 +160,19 @@ background: #f2f2f2;
 
 .box3{
 
-border-top-right-radius: 6px;
-border-top-left-radius: 6px;
-border-bottom-right-radius: 6px;
-border-bottom-left-radius: 6px;
+}
+.affixbox {
 background-color:#666666;
 background:#666666;
 margin-bottom: 0px;
-margin-top: 10px;
+margin-top: 0px;
+margin-right: 0px;
 padding:5px 5px 5px 5px;
+width:100%;
+overflow: scroll;
+overflow-x: hidden;
 }.box4{
 
-border-top-right-radius: 6px;
-border-top-left-radius: 6px;
-border-bottom-right-radius: 6px;
-border-bottom-left-radius: 6px;
-background-color:#c9cbcd;
-background:#c9cbcd;
 padding:5px 5px 5px 5px;
 
 
