--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5308,6 +5308,10 @@ input[type="submit"].btn.btn-mini {
   padding: 0 5px;
   margin-left: 3px;
 }
+.tooltip.mouse{
+  padding: 5px 0;
+  margin-top: 3px;
+}
 
 .tooltip.bottom {
   padding: 5px 0;
